updated in property files

--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,5 @@ brandname=Indosat
 deviceid=00d57723-464d-455b-ab81-1cd22f4dda31
 internalname=Umroh Haji Internet 45hr
 paymentMethod=Indomaret
+catologUrl=http://digital-catalog.qa2-sg.cld/digital-catalog/api/
+pulsaUrl=http://x-pulsa.qa2-sg.cld/x-pulsa/api/
